# soundcloud-rs

./: .gitignore  Cargo.toml  README.md  dump.txt
src/: client.rs  constants.rs  lib.rs  main.rs  types.rs
src/client/: album.rs  builder.rs  client.rs  mod.rs  playlists.rs  search.rs  tests.rs  tracks.rs  users.rs
src/models/: client.rs  config.rs  error.rs  mod.rs
src/models/query/: album.rs  mod.rs  playlists.rs  search.rs  tracks.rs  users.rs
src/models/response/: mod.rs  playlists.rs  reposts.rs  search.rs  tracks.rs  users.rs
tests/: client.rs
