[package]
name = "soundcloud-rs"
version = "0.11.0"
edition = "2024"
license = "MIT"
description = "A simple Rust client for the SoundCloud API"
repository = "https://github.com/emilsharkov/soundcloud-rs"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
ffmpeg-sidecar = "2.0.6"
